travis: drop default config path for phpunit

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_script:
 
 script:
   - mkdir -p build/logs
-  - php vendor/bin/phpunit -c phpunit.xml
+  - vendor/bin/phpunit
 
 after_script:
-  - php vendor/bin/coveralls -v
+  - vendor/bin/coveralls -v
