--- a/composer.json
+++ b/composer.json
@@ -1,28 +1,28 @@
 {
-  "name": "ralouphie/mimey",
-  "description": "PHP package for converting file extensions to MIME types and vice versa.",
-  "license": "MIT",
-  "authors": [
-    {
-      "name": "Ralph Khattar",
-      "email": "ralph.khattar@gmail.com"
+    "name": "ralouphie/mimey",
+    "description": "PHP package for converting file extensions to MIME types and vice versa.",
+    "license": "MIT",
+    "authors": [
+        {
+            "name": "Ralph Khattar",
+            "email": "ralph.khattar@gmail.com"
+        }
+    ],
+    "require": {
+        "php": ">=7.0"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^9.4",
+        "php-coveralls/php-coveralls": "^2.4"
+    },
+    "autoload": {
+        "psr-4": {
+            "Mimey\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Mimey\\Tests\\": "tests/src/"
+        }
     }
-  ],
-  "require": {
-    "php": "^5.4|^7.0"
-  },
-  "require-dev": {
-    "phpunit/phpunit": "^4.8 || ^5.7 || ^6.5",
-    "php-coveralls/php-coveralls": "^1.1"
-  },
-  "autoload": {
-    "psr-4": {
-      "Mimey\\": "src/"
-    }
-  },
-  "autoload-dev": {
-    "psr-4": {
-      "Mimey\\Tests\\": "tests/src/"
-    }
-  }
 }
